--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "mongoose": "^5.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
