--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "css-loader": "^5.2.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "mongoose": "^5.12.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "style-loader": "^2.0.0"
   }
 }
